# autonomous-zeppelin

./: .gitignore  README.md
dev/: .zsh_history  .zshrc  .~lock.pinout.ods#  Untitled 1.ods  apt.txt  ctest  ctest.cpp  drive.py  drive_hardware.py  index.html  laser_scan_360.py  links_to_investigate.txt  pinout.ods  potentail_week_points  py_parallel.py  sample  sample.cpp  up_down.py  wtf  wtf.cpp
dev/cpp_laser/: CMakeLists.txt  package.xml
dev/cpp_laser/src/: cpp_laser.cpp
dev/cpp_lidar/: CMakeLists.txt  package.xml
dev/cpp_lidar/include/cpp_lidar/: TFmini.h
dev/cpp_lidar/launch/: tfmini.launch
dev/cpp_lidar/src/: TFmini.cpp  cpp_lidar.cpp
dev_ws/src/dummy_map_server_mauz/: CMakeLists.txt  package.xml
dev_ws/src/dummy_map_server_mauz/src/: dummy_map_server.cpp
dev_ws/src/sam_bot_description/config/: amcl.yaml  ekf.yaml  ekf_base.yaml  ekf_only_odom.yaml  joystick.yaml  nav2_params.yaml  slam_toolbox.yaml
dev_ws/src/sam_bot_description/launch/: all.launch.py  display.launch.py  joy_flysky.launch.py  nav.launch.py  only_sth.launch.py  slam_toolbox.launch copy.py
dev_ws/src/sam_bot_description/rviz/: nav2_default_view.rviz  urdf_config.rviz
pi_ws/: lidar_test.py  run  set_lidar_hz.py  source
pi_ws/src/hardware/: package.xml  setup.py
pi_ws/src/laser_vone/: package.xml  setup.cfg  setup.py
pi_ws/src/pi/: package.xml  setup.py
pi_ws/src/tfmini_ros/: CMakeLists.txt  package.xml
pi_ws/src/tfmini_ros/include/tfmini_ros/: TFmini.h
pi_ws/src/tfmini_ros/launch/: tfmini.launch
pi_ws/src/tfmini_ros/src/: TFmini.cpp  TFmini_ros_node.cpp
(+13 files in other folders)
